# TiMBA

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  COPYRIGHT  Citation.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: actions.yml  sonarscan.yml
TiMBA/: __init__.py  main.py
TiMBA/cli/: cli.py
TiMBA/data/input/02_Additional_Information/: worldprice.xlsx
TiMBA/data/input/02_Additional_Informations/: additional_information.xlsx
TiMBA/data/input/03_Serialization/: AddInfoContent.pkl  WorldDataContent.pkl  WorldPriceContent.pkl
TiMBA/data_management/: DataContainer.py  DataManager.py  ParameterCollector.py  ProcessManager.py
TiMBA/data_validation/: DataValidator.py
TiMBA/helpers/: utils.py
TiMBA/logic/: model.py  model_helpers.py  tests.py
TiMBA/main_runner/: main_runner.py
TiMBA/parameters/: Defines.py  Domains.py  REGEX_patterns.py  __init__.py  domain_lists.py  headers.py  paths.py
TiMBA/parameters/domain_specifiers/: AbstractDomainSpecifier.py  Demand.py  ExogChange.py  Forest.py  Manufacture.py  RecyclingS.py  Specification.py  Supply.py  Transportation.py
TiMBA/results_logging/: FileBaseclass.py  Logging.py  ResultsWriter.py  base_logger.py
TiMBA/user_io/: default_parameters.py
documentation/: DOCUMENTATION.bib  DOCUMENTATION.docx  DOCUMENTATION.md
paper/: paper.bib  paper.md
test/: test_DataContainers.py  test_Domain_Lists.py  test_TiMBA.py
test/test_data/: DataContainer_Sc_scenario_input.pkl
