[build-system]
requires = ["setuptools>=62.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TiMBA"
version = "1.0.0"
authors = [{name = "TI-FSM", email = "wf-timba@thuenen.de"}]
description = "TiMBA is a partial economic equilibrium model for the global forest products market"
readme = "README.md"
license = {file = "COPYING.txt"}
keywords = ["timba", "model", "optimization", "thuenen institute", "economics of forests", "research"]

requires-python = ">=3.8.9"
dependencies = [
    "click==8.1.3",
    "cvxpy==1.5.2",
    "openpyxl==3.1.2",
    "dataclasses==0.6",
    "DateTime==5.5",
    "numpy==1.24.4",
    "pandas==1.5.3",
    "pathlib==1.0.1",
    "typing==3.7.4.3",
    "coverage==7.6.1",
    "tomli==2.0.1"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://placeholder.com"
Documentation = "https://placeholder.org"
Repository = "https://github.com/TI-FSM"
Issues = "https://github.com/TI-FSM/me/spam/issues"
Changelog = "https://github.com/TI-FSM/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
run_timba = "TiMBA.cli.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
"*" = ["README.md"]

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.coverage.run]
branch = true
include = ["TiMBA/*"]
command_line = "-m unittest discover -s test"
