[build-system]
requires = ["setuptools==75.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TiMBA" 
version = "1.0.3"
authors = [{name = "TI-FSM", email = "wf-timba@thuenen.de"}]
description = "TiMBA is a partial economic equilibrium model for the global forest products market"
readme = "README.md"
license = {file = "COPYING.txt"}
keywords = ["timba", "model", "optimization", "thuenen institute", "economics of forests", "research"]

requires-python = ">=3.9,<3.12 "
dependencies = [
    "click==8.1.7",
    "coverage==7.6.3",
    "osqp==0.6.7.post3",
    "cvxpy==1.6.4",
    "dataclasses==0.6",
    "DateTime==5.5",
    "openpyxl==3.1.5",
    "numpy==1.26.4",
    "pandas==1.5.3",
    "pathlib==1.0.1",
    "tomli==2.0.2",
    "typing==3.7.4.3" 
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]

[project.urls]
Homepage = "https://placeholder.com"
Documentation = "https://placeholder.org"
Repository = "https://github.com/TI-Forest-Sector-Modelling/TiMBA"
Issues = "https://github.com/TI-Forest-Sector-Modelling/TiMBA/issues"

[project.scripts]
run_timba = "TiMBA.cli.cli:cli"

[tool.setuptools]
include-package-data = true
zip-safe = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.package-data]
"*" = ["README.md"]

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.coverage.run]
branch = true
include = ["TiMBA/*"]
command_line = "-m unittest discover -s test"
